--- a/package.json
+++ b/package.json
@@ -15,23 +15,24 @@
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.5",
     "@hookform/resolvers": "^3.3.4",
-    "@neondatabase/serverless": "^0.7.2",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@nextui-org/react": "^2.2.9",
-    "@prisma/adapter-neon": "^5.9.1",
     "@prisma/client": "^5.9.1",
     "@t3-oss/env-nextjs": "^0.9.2",
-    "@tanstack/react-query": "^5.20.5",
-    "@tanstack/react-query-devtools": "^5.20.5",
+    "@tanstack/react-query": "^5.21.2",
+    "@tanstack/react-query-devtools": "^5.21.3",
     "@trpc/client": "^11.0.0-next-beta.289",
     "@trpc/next": "^11.0.0-next-beta.289",
     "@trpc/react-query": "^11.0.0-next-beta.289",
     "@trpc/server": "^11.0.0-next-beta.289",
     "@uploadthing/react": "^6.2.3",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "crypto-js": "^4.2.0",
     "framer-motion": "^11.0.5",
     "lucide-react": "^0.331.0",
+    "mobile-device-detect": "^0.4.3",
     "next": "^14.1.0",
     "next-auth": "^4.24.6",
     "next-themes": "^0.2.1",
@@ -51,9 +52,11 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/crypto-js": "^4.2.2",
     "@types/eslint": "^8.56.2",
     "@types/node": "^20.11.19",
-    "@types/react": "^18.2.55",
+    "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^7.0.1",
