--- a/package.json
+++ b/package.json
@@ -16,60 +16,60 @@
     "@ducanh2912/next-pwa": "^10.2.5",
     "@hookform/resolvers": "^3.3.4",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@nextui-org/react": "^2.2.9",
-    "@prisma/client": "^5.9.1",
+    "@nextui-org/react": "^2.2.10",
+    "@prisma/client": "^5.11.0",
     "@t3-oss/env-nextjs": "^0.9.2",
-    "@tanstack/react-query": "^5.21.2",
-    "@tanstack/react-query-devtools": "^5.21.3",
-    "@trpc/client": "^11.0.0-next-beta.289",
-    "@trpc/next": "^11.0.0-next-beta.289",
-    "@trpc/react-query": "^11.0.0-next-beta.289",
-    "@trpc/server": "^11.0.0-next-beta.289",
-    "@uploadthing/react": "^6.2.3",
+    "@tanstack/react-query": "^5.28.4",
+    "@tanstack/react-query-devtools": "^5.28.4",
+    "@trpc/client": "next",
+    "@trpc/next": "next",
+    "@trpc/react-query": "next",
+    "@trpc/server": "next",
+    "@uploadthing/react": "6.3.4",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "crypto-js": "^4.2.0",
-    "framer-motion": "^11.0.5",
-    "lucide-react": "^0.331.0",
+    "framer-motion": "^11.0.15",
+    "lucide-react": "^0.359.0",
     "mobile-device-detect": "^0.4.3",
-    "next": "^14.1.0",
-    "next-auth": "^4.24.6",
-    "next-themes": "^0.2.1",
+    "next": "^14.1.4",
+    "next-auth": "^4.24.7",
+    "next-themes": "^0.3.0",
     "pdfjs-dist": "^4.0.379",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.50.1",
-    "react-pdf": "^7.7.0",
+    "react-hook-form": "^7.51.1",
+    "react-pdf": "^7.7.1",
     "server-only": "^0.0.1",
-    "sonner": "^1.4.0",
+    "sonner": "^1.4.3",
     "superjson": "^2.2.1",
-    "tailwind-merge": "^2.2.1",
+    "tailwind-merge": "^2.2.2",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^6.4.0",
+    "uploadthing": "6.5.2",
     "ws": "^8.16.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/crypto-js": "^4.2.2",
-    "@types/eslint": "^8.56.2",
-    "@types/node": "^20.11.19",
-    "@types/react": "^18.2.56",
-    "@types/react-dom": "^18.2.19",
+    "@types/eslint": "^8.56.6",
+    "@types/node": "^20.11.30",
+    "@types/react": "^18.2.67",
+    "@types/react-dom": "^18.2.22",
     "@types/ws": "^8.5.10",
-    "@typescript-eslint/eslint-plugin": "^7.0.1",
-    "@typescript-eslint/parser": "^7.0.1",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "^14.1.0",
-    "postcss": "^8.4.35",
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "@typescript-eslint/parser": "^7.3.1",
+    "autoprefixer": "^10.4.18",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.1.4",
+    "postcss": "^8.4.37",
     "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "prisma": "^5.9.1",
+    "prettier-plugin-tailwindcss": "^0.5.12",
+    "prisma": "^5.11.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.2"
   },
   "ct3aMetadata": {
     "initVersion": "7.26.0"
