--- a/package.json
+++ b/package.json
@@ -16,30 +16,31 @@
     "@ducanh2912/next-pwa": "^10.2.6",
     "@hookform/resolvers": "^3.3.4",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@nextui-org/react": "^2.2.10",
+    "@nextui-org/react": "^2.3.1",
     "@prisma/client": "^5.12.1",
     "@t3-oss/env-nextjs": "^0.9.2",
-    "@tanstack/react-query": "^5.29.0",
-    "@tanstack/react-query-devtools": "^5.29.0",
+    "@tanstack/react-query": "^5.29.2",
+    "@tanstack/react-query-devtools": "^5.29.2",
     "@trpc/client": "next",
     "@trpc/next": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
-    "@uploadthing/react": "6.4.1",
+    "@uploadthing/react": "6.4.4",
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "crypto-js": "^4.2.0",
-    "framer-motion": "^11.0.25",
-    "lucide-react": "^0.365.0",
+    "framer-motion": "^11.1.3",
+    "lucide-react": "^0.368.0",
     "mobile-device-detect": "^0.4.3",
-    "next": "^14.1.4",
+    "next": "^14.2.1",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
-    "pdfjs-dist": "^4.0.379",
+    "pdfjs-dist": "^4.1.392",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.51.2",
+    "react-hook-form": "^7.51.3",
     "react-pdf": "^7.7.1",
     "server-only": "^0.0.1",
     "sonner": "^1.4.41",
@@ -47,29 +48,29 @@
     "tailwind-merge": "^2.2.2",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "6.7.0",
+    "uploadthing": "6.9.0",
     "ws": "^8.16.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/crypto-js": "^4.2.2",
-    "@types/eslint": "^8.56.7",
-    "@types/node": "^20.12.5",
-    "@types/react": "^18.2.74",
-    "@types/react-dom": "^18.2.24",
+    "@types/eslint": "^8.56.9",
+    "@types/node": "^20.12.7",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
     "@types/ws": "^8.5.10",
-    "@typescript-eslint/eslint-plugin": "^7.5.0",
-    "@typescript-eslint/parser": "^7.5.0",
+    "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@typescript-eslint/parser": "^7.7.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.4",
+    "eslint-config-next": "^14.2.1",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.13",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "prisma": "^5.12.1",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.4"
+    "typescript": "^5.4.5"
   },
   "ct3aMetadata": {
     "initVersion": "7.26.0"
