--- a/package.json
+++ b/package.json
@@ -16,59 +16,57 @@
     "@ducanh2912/next-pwa": "^10.2.6",
     "@hookform/resolvers": "^3.3.4",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@nextui-org/react": "^2.3.1",
-    "@prisma/client": "^5.12.1",
-    "@t3-oss/env-nextjs": "^0.9.2",
-    "@tanstack/react-query": "^5.29.2",
-    "@tanstack/react-query-devtools": "^5.29.2",
-    "@trpc/client": "next",
-    "@trpc/next": "next",
-    "@trpc/react-query": "next",
-    "@trpc/server": "next",
-    "@uploadthing/react": "6.4.4",
+    "@nextui-org/react": "^2.3.6",
+    "@prisma/client": "^5.13.0",
+    "@t3-oss/env-nextjs": "^0.10.1",
+    "@tanstack/react-query": "^5.32.0",
+    "@tanstack/react-query-devtools": "^5.32.0",
+    "@trpc/client": "11.0.0-rc.359",
+    "@trpc/next": "11.0.0-rc.359",
+    "@trpc/react-query": "11.0.0-rc.359",
+    "@trpc/server": "11.0.0-rc.359",
+    "@uploadthing/react": "6.5.0",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
-    "framer-motion": "^11.1.3",
-    "lucide-react": "^0.368.0",
+    "framer-motion": "^11.1.7",
+    "lucide-react": "^0.376.0",
     "mobile-device-detect": "^0.4.3",
-    "next": "^14.2.1",
+    "next": "^14.2.3",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "pdfjs-dist": "^4.1.392",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-hook-form": "^7.51.3",
     "react-pdf": "^7.7.1",
     "server-only": "^0.0.1",
     "sonner": "^1.4.41",
     "superjson": "^2.2.1",
-    "tailwind-merge": "^2.2.2",
+    "tailwind-merge": "^2.3.0",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "6.9.0",
-    "ws": "^8.16.0",
-    "zod": "^3.22.4"
+    "uploadthing": "6.10.0",
+    "zod": "^3.23.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/crypto-js": "^4.2.2",
-    "@types/eslint": "^8.56.9",
+    "@types/eslint": "^8.56.10",
     "@types/node": "^20.12.7",
-    "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25",
-    "@types/ws": "^8.5.10",
-    "@typescript-eslint/eslint-plugin": "^7.7.0",
-    "@typescript-eslint/parser": "^7.7.0",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.1",
+    "eslint-config-next": "^14.2.3",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "prisma": "^5.12.1",
+    "prisma": "^5.13.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   },
